# wordpress-mcp-server

./: Dockerfile  LICENSE  README.md  local_wordpress.md  main.py  pyproject.toml
.github/workflows/: docker-build-and-push.yml
src/: config.py  server.py
src/tools/: categories.py  media.py  posts.py  site.py  tags.py  users.py
